# Jaypee-Climb-Racing

./: CMakeLists.txt  README.md  leaderboard.txt  main.cpp  makefile
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
src/: main.cpp
